--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=sbahala_Triangle567_2A
-sonar.projectKey=sbahala
+sonar.organization=sbahala
+sonar.projectKey=sbahala_Triangle567_2A
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
